# CMakeTestbed

./: CMakeLists.txt
src/: CMakeLists.txt  SomethingToTest.cpp  SomethingToTest.h  main.cpp
test/: CMakeLists.txt  JsonTest.cpp  SomethingToTestTests.cpp  main.cpp
